chore: add width and height properties to image to avoid layout shifts

--- a/src/features/messages/components/styles/message.module.scss
+++ b/src/features/messages/components/styles/message.module.scss
@@ -11,8 +11,8 @@
     margin-bottom: 4px;
 
     img {
-      overflow: hidden;
       border-radius: 1rem;
+      height: auto;
       object-fit: contain;
     }
   }
